Fix title spacing

--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,14 @@ html {
 }
 
 body {
-  margin: 1rem; /* should be 0 */
+  margin: 0rem; /* should be 0 */
 }
 
 header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto 4.8rem 7fr 1.5rem;
+  grid-template-rows: auto 4.3rem 7fr 1.5rem;
+  grid-row-gap: .75rem;
 }
 
 h1 {
@@ -32,7 +33,6 @@ h1 {
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
 .title {
@@ -54,6 +54,7 @@ h2 {
   grid-column: 1 / -1;
   grid-row: 3 / 4;
   align-self: end;
+  padding-left: 1rem;
 }
 
 p {
@@ -61,6 +62,7 @@ p {
   grid-column: 1 / -1;
   grid-row: 4 / 5;
   align-self: end;
+  padding-left: 1rem;
 }
 
 dt {
